--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
     "python.linting.enabled": true,
     "python.analysis.typeshedPaths": [
-        ".vscode/Pico-Stub"
+        ".vscode/Pico-W-Stub"
     ],
     "python.languageServer": "Pylance",
     "python.analysis.typeCheckingMode": "basic",
     "python.analysis.extraPaths": [
-        ".vscode/Pico-Stub/stubs",
-        "lib"
-    ]
+        "lib",
+        ".vscode/Pico-W-Stub/stubs"
+    ],
+    "picowgo.syncFolder": "",
+    "picowgo.openOnStart": true
 }
